ModQ - Prevent images from overflowing in height

--- a/src/app/admin/mod-queue/admin-mod-queue.component.scss
+++ b/src/app/admin/mod-queue/admin-mod-queue.component.scss
@@ -19,6 +19,7 @@
 				img {
 					margin-right: 1em;
 					width: 64px;
+					max-height: 64px;
 				}
 
 				span {
